PMM-571 Remove alerting for now. (#27)
