# api/swagger/models/api_alert_rule.go
@@ -1,62 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// APIAlertRule api alert rule
-// swagger:model apiAlertRule
-
-type APIAlertRule struct {
-
-	// disabled
-	Disabled bool `json:"disabled,omitempty"`
-
-	// name
-	Name string `json:"name,omitempty"`
-
-	// text
-	Text string `json:"text,omitempty"`
-}
-
-/* polymorph apiAlertRule disabled false */
-
-/* polymorph apiAlertRule name false */
-
-/* polymorph apiAlertRule text false */
-
-// Validate validates this api alert rule
-func (m *APIAlertRule) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *APIAlertRule) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *APIAlertRule) UnmarshalBinary(b []byte) error {
-	var res APIAlertRule
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
