# api/swagger/models/api_alerts_get_response.go
@@ -1,76 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// APIAlertsGetResponse api alerts get response
-// swagger:model apiAlertsGetResponse
-
-type APIAlertsGetResponse struct {
-
-	// alert rule
-	AlertRule *APIAlertRule `json:"alert_rule,omitempty"`
-}
-
-/* polymorph apiAlertsGetResponse alert_rule false */
-
-// Validate validates this api alerts get response
-func (m *APIAlertsGetResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAlertRule(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *APIAlertsGetResponse) validateAlertRule(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.AlertRule) { // not required
-		return nil
-	}
-
-	if m.AlertRule != nil {
-
-		if err := m.AlertRule.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("alert_rule")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *APIAlertsGetResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *APIAlertsGetResponse) UnmarshalBinary(b []byte) error {
-	var res APIAlertsGetResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
