# api/swagger/models/api_alerts_list_response.go
@@ -1,86 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"strconv"
-
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// APIAlertsListResponse api alerts list response
-// swagger:model apiAlertsListResponse
-
-type APIAlertsListResponse struct {
-
-	// alert rules
-	AlertRules []*APIAlertRule `json:"alert_rules"`
-}
-
-/* polymorph apiAlertsListResponse alert_rules false */
-
-// Validate validates this api alerts list response
-func (m *APIAlertsListResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAlertRules(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *APIAlertsListResponse) validateAlertRules(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.AlertRules) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.AlertRules); i++ {
-
-		if swag.IsZero(m.AlertRules[i]) { // not required
-			continue
-		}
-
-		if m.AlertRules[i] != nil {
-
-			if err := m.AlertRules[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("alert_rules" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *APIAlertsListResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *APIAlertsListResponse) UnmarshalBinary(b []byte) error {
-	var res APIAlertsListResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
